--- a/content/sass/_header.scss
+++ b/content/sass/_header.scss
@@ -2,6 +2,7 @@
 	background-color:#fff;
 	min-height:rem(72px);
 	@include respond-min($medium) {
+		height:rem(96px);
 		min-height:0;
 		margin:0 auto;
 		position:relative;
