--- a/content/sass/_color.scss
+++ b/content/sass/_color.scss
@@ -7,7 +7,7 @@
 // Colour any object with branding basics colours
 //
 //
-//<div class="row text--center dark-blue items-container">
+//<div class="row text--center dark-blue push--bottom items-container">
 //  <div class="col small_6 medium_4 xlarge_2 item">
 //    <div class="circle--large primary-font-bold white bg-dark-blue circle circle--large col--centered">Dark blue</div>
 //    <div class="gamma">
