--- a/content/sass/_color.scss
+++ b/content/sass/_color.scss
@@ -67,10 +67,10 @@
 //        <tr><th>Dark blue</th><th>%</th><th>Hexadecimal</th><th>CSS</th></tr>
 //      </thead>
 //      <tbody>
-//        <tr><td><div class="circle bg-dark-blue">&nbsp;</div></td><td>100%</td><td>007bc3</td><td>.dark-blue</td></tr>
-//        <tr><td><div class="circle bg-dark-blue--75">&nbsp;</div></td><td>75%</td><td>409cd2</td><td>.dark-blue--75</td></tr>
-//        <tr><td><div class="circle bg-dark-blue--50">&nbsp;</div></td><td>50%</td><td>7fbde1</td><td>.dark-blue--50</td></tr>
-//        <tr><td><div class="circle bg-dark-blue--25">&nbsp;</div></td><td>25%</td><td>bfdef0</td><td>.dark-blue--25</td></tr>
+//        <tr><td><div class="circle bg-dark-blue">&nbsp;</div></td><td>100%</td><td>0a2f73</td><td>.dark-blue</td></tr>
+//        <tr><td><div class="circle bg-dark-blue--75">&nbsp;</div></td><td>75%</td><td>476396</td><td>.dark-blue--75</td></tr>
+//        <tr><td><div class="circle bg-dark-blue--50">&nbsp;</div></td><td>50%</td><td>8497b9</td><td>.dark-blue--50</td></tr>
+//        <tr><td><div class="circle bg-dark-blue--25">&nbsp;</div></td><td>25%</td><td>c1cbdc</td><td>.dark-blue--25</td></tr>
 //      </tbody>
 //    </table>
 //  </div>
@@ -81,7 +81,7 @@
 //      </thead>
 //      <tbody>
 //        <tr><td><div class="circle bg-bright-blue">&nbsp;</div></td><td>100%</td><td>007bc3</td><td>.bright-blue</td></tr>
-//        <tr><td><div class="circle bg-bright-blue--75">&nbsp;</div></td><td>75%</td><td>409cd2</td><td>.bright-blue--75</td></tr>
+//        <tr><td><div class="circle bg-bright-blue--75">&nbsp;</div></td><td>75%</td><td>3f9cd2</td><td>.bright-blue--75</td></tr>
 //        <tr><td><div class="circle bg-bright-blue--50">&nbsp;</div></td><td>50%</td><td>7fbde1</td><td>.bright-blue--50</td></tr>
 //        <tr><td><div class="circle bg-bright-blue--25">&nbsp;</div></td><td>25%</td><td>bfdef0</td><td>.bright-blue--25</td></tr>
 //      </tbody>
@@ -93,10 +93,10 @@
 //        <tr><th>Yellow</th><th>%</th><th>Hexadecimal</th><th>CSS</th></tr>
 //      </thead>
 //      <tbody>
-//        <tr><td><div class="circle bg-yellow">&nbsp;</div></td><td>100%</td><td>007bc3</td><td>.yellow</td></tr>
-//        <tr><td><div class="circle bg-yellow--75">&nbsp;</div></td><td>75%</td><td>409cd2</td><td>.yellow--75</td></tr>
-//        <tr><td><div class="circle bg-yellow--50">&nbsp;</div></td><td>50%</td><td>7fbde1</td><td>.yellow--50</td></tr>
-//        <tr><td><div class="circle bg-yellow--25">&nbsp;</div></td><td>25%</td><td>bfdef0</td><td>.yellow--25</td></tr>
+//        <tr><td><div class="circle bg-yellow">&nbsp;</div></td><td>100%</td><td>ffdd00</td><td>.yellow</td></tr>
+//        <tr><td><div class="circle bg-yellow--75">&nbsp;</div></td><td>75%</td><td>ffe53f</td><td>.yellow--75</td></tr>
+//        <tr><td><div class="circle bg-yellow--50">&nbsp;</div></td><td>50%</td><td>ffee7f</td><td>.yellow--50</td></tr>
+//        <tr><td><div class="circle bg-yellow--25">&nbsp;</div></td><td>25%</td><td>fff6bf</td><td>.yellow--25</td></tr>
 //      </tbody>
 //    </table>
 //  </div>
@@ -106,10 +106,10 @@
 //        <tr><th>Orange</th><th>%</th><th>Hexadecimal</th><th>CSS</th></tr>
 //      </thead>
 //      <tbody>
-//        <tr><td><div class="circle bg-orange">&nbsp;</div></td><td>100%</td><td>007bc3</td><td>.orange</td></tr>
-//        <tr><td><div class="circle bg-orange--75">&nbsp;</div></td><td>75%</td><td>409cd2</td><td>.orange--75</td></tr>
-//        <tr><td><div class="circle bg-orange--50">&nbsp;</div></td><td>50%</td><td>7fbde1</td><td>.orange--50</td></tr>
-//        <tr><td><div class="circle bg-orange--25">&nbsp;</div></td><td>25%</td><td>bfdef0</td><td>.orange--25</td></tr>
+//        <tr><td><div class="circle bg-orange">&nbsp;</div></td><td>100%</td><td>ff8a00</td><td>.orange</td></tr>
+//        <tr><td><div class="circle bg-orange--75">&nbsp;</div></td><td>75%</td><td>ffa73f</td><td>.orange--75</td></tr>
+//        <tr><td><div class="circle bg-orange--50">&nbsp;</div></td><td>50%</td><td>ffc47f</td><td>.orange--50</td></tr>
+//        <tr><td><div class="circle bg-orange--25">&nbsp;</div></td><td>25%</td><td>ffe1bf</td><td>.orange--25</td></tr>
 //      </tbody>
 //    </table>
 //  </div>
@@ -119,10 +119,10 @@
 //        <tr><th>Grey</th><th>%</th><th>Hexadecimal</th><th>CSS</th></tr>
 //      </thead>
 //      <tbody>
-//        <tr><td><div class="circle bg-grey">&nbsp;</div></td><td>100%</td><td>007bc3</td><td>.grey</td></tr>
-//        <tr><td><div class="circle bg-grey--75">&nbsp;</div></td><td>75%</td><td>409cd2</td><td>.grey--75</td></tr>
-//        <tr><td><div class="circle bg-grey--50">&nbsp;</div></td><td>50%</td><td>7fbde1</td><td>.grey--50</td></tr>
-//        <tr><td><div class="circle bg-grey--25">&nbsp;</div></td><td>25%</td><td>bfdef0</td><td>.grey--25</td></tr>
+//        <tr><td><div class="circle bg-grey">&nbsp;</div></td><td>100%</td><td>4b4b4b</td><td>.grey</td></tr>
+//        <tr><td><div class="circle bg-grey--75">&nbsp;</div></td><td>75%</td><td>787878</td><td>.grey--75</td></tr>
+//        <tr><td><div class="circle bg-grey--50">&nbsp;</div></td><td>50%</td><td>a5a5a5</td><td>.grey--50</td></tr>
+//        <tr><td><div class="circle bg-grey--25">&nbsp;</div></td><td>25%</td><td>d2d2d2</td><td>.grey--25</td></tr>
 //      </tbody>
 //    </table>
 //  </div>
@@ -132,10 +132,10 @@
 //        <tr><th>Blue tint</th><th>%</th><th>Hexadecimal</th><th>CSS</th></tr>
 //      </thead>
 //      <tbody>
-//        <tr><td><div class="circle bg-blue-tint">&nbsp;</div></td><td>100%</td><td>007bc3</td><td>.blue-tint</td></tr>
-//        <tr><td><div class="circle bg-blue-tint--75">&nbsp;</div></td><td>75%</td><td>409cd2</td><td>.blue-tint--75</td></tr>
-//        <tr><td><div class="circle bg-blue-tint--50">&nbsp;</div></td><td>50%</td><td>7fbde1</td><td>.blue-tint--50</td></tr>
-//        <tr><td><div class="circle bg-blue-tint--25">&nbsp;</div></td><td>25%</td><td>bfdef0</td><td>.blue-tint--25</td></tr>
+//        <tr><td><div class="circle bg-blue-tint">&nbsp;</div></td><td>100%</td><td>e0edfe</td><td>.blue-tint</td></tr>
+//        <tr><td><div class="circle bg-blue-tint--75">&nbsp;</div></td><td>75%</td><td>e7f1fe</td><td>.blue-tint--75</td></tr>
+//        <tr><td><div class="circle bg-blue-tint--50">&nbsp;</div></td><td>50%</td><td>eff6fe</td><td>.blue-tint--50</td></tr>
+//        <tr><td><div class="circle bg-blue-tint--25">&nbsp;</div></td><td>25%</td><td>f7fafe</td><td>.blue-tint--25</td></tr>
 //      </tbody>
 //    </table>
 //  </div>
