--- a/content/sass/all.scss
+++ b/content/sass/all.scss
@@ -66,7 +66,8 @@
 // Overrides for Sharepoint template
 @import "_sharepoint";
 
-// Remodal
-@import "_remodal";
+// Modal for SLDG site template
+@import "_modal";
 
-
+// Email templates
+@import "_email";
