--- a/content/sass/_color.scss
+++ b/content/sass/_color.scss
@@ -9,42 +9,42 @@
 //
 //<div class="row text--center dark-blue push--bottom items-container">
 //  <div class="col small_6 medium_4 xlarge_2 item">
-//    <div class="circle--large primary-font-bold white bg-dark-blue circle circle--large col--centered">Dark blue</div>
+//    <div class="primary-font-bold white bg-dark-blue circle circle--large col--centered">Dark blue</div>
 //    <div class="gamma">
 //      <strong>Hex</strong> 0a2f73 <br />
 //      <strong>CSS</strong> .dark-blue, bg-dark-blue
 //    </div>
 //  </div>
 //  <div class="col small_6 medium_4 xlarge_2 item">
-//    <div class="circle--large primary-font-bold white bg-bright-blue circle circle--large col--centered">Bright blue</div>
+//    <div class="primary-font-bold white bg-bright-blue circle circle--large col--centered">Bright blue</div>
 //    <div class="gamma">
 //      <strong>Hex</strong> 007bc3 <br />
 //      <strong>CSS</strong> .bright-blue, bg-bright-blue
 //    </div>
 //  </div>
 //  <div class="col small_6 medium_4 xlarge_2 item">
-//    <div class="circle--large primary-font-bold dark-blue bg-yellow circle circle--large col--centered">Yellow</div>
+//    <div class="primary-font-bold dark-blue bg-yellow circle circle--large col--centered">Yellow</div>
 //    <div class="gamma">
 //      <strong>Hex</strong> ffdd00 <br />
 //      <strong>CSS</strong> .yellow, bg-yellow
 //    </div>
 //  </div>
 //  <div class="col small_6 medium_4 xlarge_2 item">
-//    <div class="circle--large primary-font-bold white bg-orange circle circle--large col--centered">Orange</div>
+//    <div class="primary-font-bold white bg-orange circle circle--large col--centered">Orange</div>
 //    <div class="gamma">
 //      <strong>Hex</strong> ff8a00 <br />
 //      <strong>CSS</strong> .orange, bg-orange
 //    </div>
 //  </div>
 //  <div class="col small_6 medium_4 xlarge_2 item">
-//    <div class="circle--large primary-font-bold white bg-grey circle circle--large col--centered">Grey</div>
+//    <div class="primary-font-bold white bg-grey circle circle--large col--centered">Grey</div>
 //    <div class="gamma">
 //      <strong>Hex</strong> 4b4b4b <br />
 //      <strong>CSS</strong> .grey, bg-grey
 //    </div>
 //  </div>
 //  <div class="col small_6 medium_4 xlarge_2 item">
-//    <div class="circle--large primary-font-bold dark-blue bg-blue-tint circle circle--large col--centered">Blue tint</div>
+//    <div class="primary-font-bold dark-blue bg-blue-tint circle circle--large col--centered">Blue tint</div>
 //    <div class="gamma">
 //      <strong>Hex</strong> e0edfe <br />
 //      <strong>CSS</strong> .blue-tint, .bg-blue-tint
