navigation pattern introduction text

--- a/content/sass/_navigation.scss
+++ b/content/sass/_navigation.scss
@@ -1,6 +1,6 @@
 // Navigation
 //
-//
+// <p>The choice and implementation of the appropriate navigation pattern should be appropriate to the IA and content established in the research phase of any given project. The proposed navigation should then be implemented during wireframing, tested as part of wireframing usability testing and iterated accordingly based on feedback.</p> 
 //
 // Styleguide 12.0
 
