--- a/content/sass/_forms.scss
+++ b/content/sass/_forms.scss
@@ -163,6 +163,7 @@ textarea {
 	-webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 	color: rgba(0, 0, 0, 0.75);
+	font-family:$secondary-font;
 	-webkit-transition: -webkit-box-shadow 0.15s, border-color 0.15s ease-in-out;
 	-moz-transition: -moz-box-shadow 0.15s, border-color 0.15s ease-in-out;
 	transition: box-shadow 0.15s, border-color 0.15s ease-in-out; 
