--- a/content/sass/all.scss
+++ b/content/sass/all.scss
@@ -6,7 +6,7 @@
 
 @import "_base";
 
-@import "_global";
+@import "_fontello";
 
 @import "_panels";
 
@@ -52,8 +52,8 @@
 
 @import "_color";
 
+// Styles for SLDG sharepoint editor
 @import "_editor-content";
-
 
 // Header styles for SLDG site template
 @import "_header";
