--- a/content/sass/_typography.scss
+++ b/content/sass/_typography.scss
@@ -167,6 +167,13 @@
     font-style: normal;
 	}
 	
+body {
+	color:$grey;
+	font-family:$font-family;
+	font-size:$font-base;
+	line-height:$font-base-line-height;
+	text-rendering: optimizeLegibility;
+	}
 	
 .primary-font {
 	font-family:$primary-font;
