--- a/content/webfonts/fontello/css/fontello-embedded.css
+++ b/content/webfonts/fontello/css/fontello-embedded.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?37341099');
-  src: url('../font/fontello.eot?37341099#iefix') format('embedded-opentype'),
-       url('../font/fontello.svg?37341099#fontello') format('svg');
+  src: url('../webfonts/fontello/font/fontello.eot?37341099');
+  src: url('../webfonts/fontello/font/fontello.eot?37341099#iefix') format('embedded-opentype'),
+       url('../webfonts/fontello/font/fontello.svg?37341099#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
