typo in image ratios

--- a/content/sass/_images.scss
+++ b/content/sass/_images.scss
@@ -86,7 +86,7 @@
 
 // Image ratios
 //
-// Care should be taken when choosing image ratios. Images too tall or to thin will potentially have legibility and layout issues on samller screens. The use of a consistent 5:3 ratio for all article level content and related thumbnails is recommended. This ratio will scale gracefully across a wide variety of screen sizes and devices. The example layout below illustrates the use of a consistent 5:3 image ratio.
+// Care should be taken when choosing image ratios. Images too tall or to thin will potentially have legibility and layout issues on smaller screens. The use of a consistent 5:3 ratio for all article level content and related thumbnails is recommended. This ratio will scale gracefully across a wide variety of screen sizes and devices. The example layout below illustrates the use of a consistent 5:3 image ratio.
 //
 //
 //<div class="row push--bottom">
