ARIA abbr added to tabs

--- a/content/sass/_tabs.scss
+++ b/content/sass/_tabs.scss
@@ -1,6 +1,6 @@
 // Tabs
 //
-// Tabs are elements that help you organize and navigate multiple documents in a single container. They can be used for switching between items in the container. A tab interface built on <abbr title="Plain Old Semantic HTML">POSH</abbr> and enhanced with ARIA via javascript. 
+// Tabs are elements that help you organize and navigate multiple documents in a single container. They can be used for switching between items in the container. A tab interface built on <abbr title="Plain Old Semantic HTML">POSH</abbr> and enhanced with <abbr title="Accessible Rich Internet Applications">ARIA</abbr> via javascript. 
 //
 // Markup:
 //<div class="js-tabs">
