navigation copy and links

--- a/content/sass/_kss.scss
+++ b/content/sass/_kss.scss
@@ -208,17 +208,11 @@ pre .regexp {
 	color: $dark-blue;
 	}
 	
-.kss-menu-child > .kss-menu-item.kss-active > a {
-	
-	}
-	
-.kss-content {
-	
-	}
 
 .kss-section {
 	border-bottom:1px solid $dark-blue;
 	margin-bottom:rem(36px);
+	padding-bottom:rem(26px);
 	}
 
 .kss-overview {
