--- a/content/sass/_navigation.scss
+++ b/content/sass/_navigation.scss
@@ -4,6 +4,27 @@
 //
 // Styleguide 12.0
 
+
+// Considerations and examples 
+//
+//<ul class="list">
+//	<li class="list__item">
+//      <a href="http://www.dtelepathy.com/blog/design/ux-flows-navigation" class="list__link">UX Flows: How to Create Navigations that Guide Your User to the Goal</a>
+//	</li>
+//	<li class="list__item">
+//      <a href="http://www.smashingmagazine.com/2011/06/06/planning-and-implementing-website-navigation/" class="list__link">Planning And Implementing Website Navigation</a>
+//	</li>
+//	<li class="list__item">
+//      <a href="http://bradfrost.com/blog/web/complex-navigation-patterns-for-responsive-design/" class="list__link">Complex navigation patterns for responsive design</a>
+//	</li>
+//	<li class="list__item">
+//      <a href="http://bradfrost.github.io/this-is-responsive/patterns.html#navigation" class="list__link">Responsive navigation patterns</a>
+//	</li>
+//</ul>
+//  
+//
+// Styleguide 12.1
+
 // Simple horizontal navigation
 //
 // Markup:
@@ -26,7 +47,7 @@
 //
 //
 //
-// Styleguide 12.1
+// Styleguide 12.2
 
 
 // Simple horizontal navigation with secondary level
@@ -70,7 +91,7 @@
 //
 //
 //
-// Styleguide 12.2
+// Styleguide 12.3
 
 // Nav tabs
 //
@@ -96,7 +117,7 @@
 //
 //
 //
-// Styleguide 12.3
+// Styleguide 12.4
 
 
 // Horizontally centered nav tabs
@@ -122,7 +143,7 @@
 //
 //
 //
-// Styleguide 12.4
+// Styleguide 12.5
 
 // Breadcrumbs
 //
