navigation copy and links

--- a/content/sass/_navigation.scss
+++ b/content/sass/_navigation.scss
@@ -21,7 +21,8 @@
 //      <a href="http://bradfrost.github.io/this-is-responsive/patterns.html#navigation" class="list__link">Responsive navigation patterns</a>
 //	</li>
 //</ul>
-//  
+// 
+//<p>Below are some simple examples using <abbr title="Object Orientated CSS">OOCSS</abbr> and <abbr title="Block, Element, Modifier">BEM</abbr> methodologies to use as a potential reference or starting point when beginning to prototype navigation patterns </p>
 //
 // Styleguide 12.1
 
