--- a/content/sass/_editor-content.scss
+++ b/content/sass/_editor-content.scss
@@ -131,7 +131,7 @@
 			}
 		}
 
-	 table--indented {
+	 .table--indented {
 		@include respond-min(75em) {
 			margin-left: -11%;
 			margin-right: -34%;
