--- a/content/sass/all.scss
+++ b/content/sass/all.scss
@@ -70,5 +70,8 @@
 // Modal for SLDG site template
 @import "_modal";
 
+// Crib sheet Wall
+@import "_wall";
+
 // Email templates
 @import "_email";
