--- a/content/sass/_buttons.scss
+++ b/content/sass/_buttons.scss
@@ -132,7 +132,7 @@
 	&:focus {
 		background-color:darken($light-grey-2, 5%);
 		color: $dark-grey-3;
-		text-decoration:none;
+		text-decoration:none !important;
 		}
 	
 	&:visited {
