--- a/content/sass/_flexi-video.scss
+++ b/content/sass/_flexi-video.scss
@@ -22,7 +22,8 @@
 
 .flex-video iframe,
 .flex-video object, 
-.flex-video embed {
+.flex-video embed, 
+.flex-video video {
 	position: absolute;
 	top: 0;
 	left: 0;
